--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "1.0.0",
     "main": "app.js",
     "type": "module",
+    "scripts": {
+      "start": "node src/app.js",
+      "watch": "nodemon -e js,html,css src/app.js"
+    },
     "dependencies": {
       "express": "^4.17.1",
       "mustache-express": "^1.3.0"
