--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "main": "app.js",
     "type": "module",
     "scripts": {
-      "start": "node src/app.js",
-      "watch": "nodemon -e js,html,css src/app.js"
+        "start": "node src/app.js",
+        "watch": "nodemon -e js,html,css src/app.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "mustache-express": "^1.3.0"
+        "express": "^4.17.1",
+        "express-session": "^1.17.3",
+        "mustache-express": "^1.3.0"
     }
-  }
+}
